# aps12id_segmentation_service

./: .gitignore  AGENTS.md  README.md  pyproject.toml
aps12id_segmentation_service/: __init__.py  runtime.py  schemas.py  server.py
checkpoints/: checkpoint_url.txt
scripts/: query_segmentation_server.py  sam3_common.py  segment_with_mouse_click.py  segment_with_prompt.py
scripts/finetune/: README.md  coco_schema.py  convert_checkpoint.py  cvat_import.py  dataset.py  ls_to_coco.py  sam3_bootstrap.py  sweep.py  train.py
tests/: test_convert_checkpoint.py  test_finetune_dataset.py  test_finetune_ls_to_coco.py  test_finetune_sweep.py  test_finetune_train_args.py  test_server.py
