[project]
name = "aps12id-sample-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8",
    "fastapi>=0.139.0",
    "matplotlib>=3.8",
    "numpy>=1.26,<2",
    "pillow>=10",
    "pycocotools>=2.0.10",
    "psutil>=7",
    "python-multipart>=0.0.32",
    "sam3",
    "torch>=2.7",
    "torchvision",
    "uvicorn[standard]>=0.51.0",
    "opencv-python-headless>=4.11.0.86",
    "tqdm>=4.68.4",
    "torchmetrics>=1.9.0",
    "scipy>=1.17.1",
    "fvcore>=0.1.5.post20221221",
    "fairscale>=0.4.13",
    "scikit-image>=0.26.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
sam3 = { path = "sam3", editable = true }
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
